--- a/index-style.css
+++ b/index-style.css
@@ -33,7 +33,7 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-    font-size: 6rem;
+    font-size: 5.5rem;
 }
 
 h2, h3 {
@@ -70,6 +70,7 @@ p{
     padding: 0 12px;
     text-align: center;
     display: flex;
+    max-width: 100vw;
     align-items: center;
     justify-content: center;
     color: var(--white-color);
