--- a/sponsors/sponsors-style.css
+++ b/sponsors/sponsors-style.css
@@ -34,7 +34,7 @@ h1, h2, h3 {
 }
 
 h1 {
-    font-size: 6rem;
+    font-size: 5.5rem;
 }
 
 h2, h3 {
